--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.70, November 6, 2016
+  Add a man page.
+  
 Version 0.69, November 2, 2016
   Add command line arguments to control audio output.
   
