--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 0.76, January 29, 2017
+  Understores are no longer allowed in accelerator names.
+  Change save_as to saveas.  This change is not externally
+  visible except it removes an ugly error message on startup.
+
 Version 0.75, January 28, 2017
   Add an extra resample element to try to work around what appears
   to be a gstreamer bug.  The symptom is that the pipeline does not
