--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.81, May 22, 2017
+  Fix the Wait sequence item.
+
 Version 0.80, May 22, 2017
   Use a proper level bar instead of a row of asterisks
   to indicate volume.
