add an example project, and prepare for a second

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.82, May 29, 2017
+  Add an more example project, and prepare for a second.
+  
 Version 0.81, May 22, 2017
   Fix the Wait sequence item.
 
