--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
+Version 0.83, May 29, 2017
+  Rename the Stop sequence item to Stop Sound, and add a second
+  example project.
+  
 Version 0.82, May 29, 2017
-  Add an more example project, and prepare for a second.
+  Add an example project, and prepare for a second.
   
 Version 0.81, May 22, 2017
   Fix the Wait sequence item.
