add a third example

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.84, June 4, 2017
+  Add a third example project.
+  
 Version 0.83, May 29, 2017
   Rename the Stop sequence item to Stop Sound, and add a second
   example project.
