--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.85, June 12, 2017
+  Add sequencer tracing from the command line.
+  
 Version 0.84, June 4, 2017
   Add a third example project.
   
