--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.86, June 24, 2017
+  Use autoscan to improve the configure.ac file.
+  
 Version 0.85, June 12, 2017
   Add sequencer tracing from the command line.
   
