--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.87, July 4, 2017
+  The top-level file is a configuration file, not a project file.
+  
 Version 0.86, June 24, 2017
   Use autoscan to improve the configure.ac file.
   
