--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 0.88, July 9, 2017
+  The top-level file is back to being a project file, but add
+  --configuration-file to specify the configuration file.
+  
 Version 0.87, July 4, 2017
   The top-level file is a configuration file, not a project file.
   
