--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 0.92, August 5, 2017
+  Make the dependence on gtk-doc more explicit.
+  Avoid a divide by 0 in gstlooper so that GstWavParse will have time to
+  give an error message if it cannot parse a WAV file.
+  
 Version 0.91, July 25, 2017
   Don't permit the network port number to be set in the configuration file.
   
