place the clusters in a scrolled window

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.94, August 7, 2017
+  Place the clusters in a scrolled window.
+  
 Version 0.93, August 6, 2017
   Add a master volume control.
   
