--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 0.95, August 27, 2017
+  Fix some errors revealed by warnings when installed on Ubuntu Studio.
+  Remove propagate_natural_width, which is not supported in GTK until
+  3.22.  Make the GUI more flexible.
+  
 Version 0.94, August 7, 2017
   Place the clusters in a scrolled window.
   
