--- a/README
+++ b/README
@@ -7,6 +7,9 @@ packages: gcc, intltool, gstreamer1-devel, gstreamer-plugins-base-devel,
 gtk3-devel and gtk-doc.  I could then do the usual ./configure, make,
 sudo make install.
 
+On Ubuntu Studio 16.04 I had to install intltool, libgstreamer1.0-dev,
+gtk+-3.0 and gtk-doc-tools.
+
 This program uses custom gstreamer plugins.  To get gstreamer to load them,
 execute this bash command before running the program:
 export GST_PLUGIN_PATH=/usr/local/lib/gstreamer-1.0
