--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.96, August 28, 2017
+  Add support for JACK.
+  
 Version 0.95, August 27, 2017
   Fix some errors revealed by warnings when installed on Ubuntu Studio.
   Remove propagate_natural_width, which is not supported in GTK until
