--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.97, September 2, 2017
+  Separate current activity from messages in the GUI.
+  
 Version 0.96, August 28, 2017
   Add support for JACK.
   
