--- a/man/sound_effects_player.1
+++ b/man/sound_effects_player.1
@@ -53,6 +53,16 @@ output to this ALSA device.  To see the list of ALSA devices,
 type \fBaplay \-L\fR.
 The default is device \(aqdefault\(aq.
 .TP
+.BR \-\-client\-name =\fIname\fR
+If audio_output is JACK, use this as the JACK client name.
+The client name is used by the Qjackctl patchbay to
+do default routing of sound.  The default is the name
+of the program.
+.TP
+.BR \-\-server\-name = \fIname\fR
+if audio_output is JACK, use this as the JACK server name.
+By default use the default server.
+.TP
 .BR \-t ", " \-\-trace\-file =\fItrace-output\-file\fR
 Traces the execution of the sequencer into a text file.
 This is useful when you have a complex sound sequence, and
