--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Version 0.99, September 4, 2017
+  Improve startup error handling.
+  
+Version 0.98, September 3, 2017
+  Add JACK client name and server name
+  
 Version 0.97, September 2, 2017
   Separate current activity from messages in the GUI.
   
