--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.100, September 4, 2017
+  Fit better on small screens.
+  
 Version 0.99, September 4, 2017
   Improve startup error handling.
   
