--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 0.101, September 9, 2017
+  Print more information when there is an error starting the gstreamer
+  pipeline.
+  
 Version 0.100, September 4, 2017
   Fit better on small screens.
   
