--- a/README
+++ b/README
@@ -2,10 +2,21 @@ Sound_effects_player is a component of ShowControl, an application to control
 lighting and sound in theatrical productions.  This component plays sound
 effects.
 
-When installing on a Fedora 26 computer I had to first install the following
-packages: gcc, intltool, gstreamer1-devel, gstreamer-plugins-base-devel,
-gtk3-devel, gtk-doc and libtime.  I could then do the usual ./configure, make,
-sudo make install.
+When installing on a Fedora 28 computer I had to first install the following
+packages:
+
+  to run autogen.sh: autoconf, automake, libtool, gtk-doc, intltool
+    and glib2-devel.
+
+  to run configure: libtime, gstreamer1-devel, gstreamer1-plugins-base-devel
+    and gtk3-devel.
+
+Note that libtime is not installed with dnf but is a separate component
+of ShowControl.
+
+The copy of gtk-doc.make is from /usr/share/gtk-doc/data/gtk-doc.make.
+Its name changed in Fedora 28, so I copied it rather than having a
+symbolic link to it.
 
 If you wish to use JACK, you will need gstreamer1-plugins-good-extras
 and qjackctl.  The sound effects player does not connect its output ports
