Don't use depreciated features of Glib and Python, and update for Fedora 29

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 0.105, November 4, 2018
+  Update the dependencies list for Fedora 29, and remove the use of
+  g_type_class_add_private, now depreciated in Glib 2.58.
+  
 Version 0.104, May 29, 2018
   Update dependencies list for Fedora 28, and use the latest autobuild.
   
