--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 1.110, April 8, 2020
+  In the .desktop file, point to the correct directory for the provided
+  gstreamer plugins.
+  
 Version 0.109, April 1, 2020
   Do not attempt to run if the environment has disabled leap second support.
   
