--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.113, May 24, 2020
+  Support 8 sound channels.  See project_file.pdf for details.
+  
 Version 0.112, April 11, 2020
   Add documentation.
   
