Add tooltips to the GUI

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.114, May 25, 2020
+  Add tooltips to the GUI.
+  
 Version 0.113, May 24, 2020
   Support 8 sound channels.  See project_file.pdf for details.
   
