Fix terminating and later starting a sound.

--- a/Docs/sound_effects.tex
+++ b/Docs/sound_effects.tex
@@ -91,11 +91,11 @@
   pdfcontactregion={New Hampshire},
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2020 by John Sauter},
-  pdfdate={2020-06-17},
+  pdfdate={2020-06-23},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}  
 }
-\date{2020-06-17}
+\date{2020-06-23}
 \maketitle
 \begin{abstract}
   How to produce sound effects for live theatrical performances
@@ -238,11 +238,13 @@ a single sound that identifies all five speakers in turn should be enough.
 I have used a track called ``6-channel ID'' which identifies all of the
 speakers in a 5.1 surround sound system.  You won't hear the front
 center speaker; or if you do something is wired wrong.
+
 \subsection{House is Open}
 Play a medley of music from the play, perhaps recorded during rehearsal.
 To avoid copyright issues with this paper, I have used a nice public-domain song
 in example 4.  You won't have a copyright problem because as part of the right
 to produce your play you have a right to play the music for your audience.
+
 \subsection{Almost Ready for Curtain}
 Your theater will probably want to make a safety announcement.
 This might be done live by the management, but in case it isn't
@@ -255,10 +257,12 @@ performances.  The Afternoon and Evening versions have
 short, long and long humerous versions, whereas Morning
 has only short.  You should record a voice familiar to your audience
 making the announcements.
+
 \subsection{Act 01 Scene 01 Page 001: Creation}
 The play starts in the dark, before the Earth was created.
 It isn't at all clear what sounds would convey this to the
 audience, so we'll just have silence.
+
 \subsection{Act 01 Scene 02 Page 007: Garden of Eden}
 The Garden of Eden should sound like a garden full of mammals,
 birds, insects and reptiles for Adam to name.  They should be
@@ -266,10 +270,12 @@ very soft until page 15, when they present themselves to Adam.
 We want a sound different from the silence
 of the void, but not loud enough to distract the audience
 from the story.
+
 \subsubsection{Act 01 Scene 02 Page 015: Animals Appear}
 As the animals arrive their sounds become more noticable until
 Father starts to sing.  The director will probably not want a
 sound effect for this, but you never know.
+
 \subsubsection{Act 01 Scene 02 Page 024: Tree of Knowledge}
 The tree is said to be near a waterfall, so we can add the sound
 of running water.  However, it is later depicted as also being in the
@@ -285,15 +291,19 @@ each pair of speakers around the room: front, rear, left and right.
 Each speaker thus gets two channels.  The four stereo recordings
 are of different lengths, so as they repeat the audience doesn't
 hear the same sound every few seconds.
+
 \subsubsection{Act 01 Scene 02 Page 033a: Eve Bites the Apple}
 As Eve bites, make the sound of an apple being bitten into.
+
 \subsubsection{Act 01 Scene 02 Page 033b: Eve Departs}
 Eve walks off through the garden so
 we can end the sound of running water.  Pressing any of the Stop
 buttons marked ``Water'' stops all of them, leaving one Start button
 active.
+
 \subsubsection{Act 01 Scene 02 Page 040: Adam Bites the Apple}
 Make the apple biting sound again.
+
 \subsubsection{Act 01 Scene 02 page 042: Thunder and Lightning}
 After Father says ``forever will it burn!'' there is a terrific
 crash of thunder as a bolt of lightning strikes the Tree of Knowledge.
@@ -304,34 +314,47 @@ I filtered a monophonic version of
 the sound to eliminate all frequencies over 100 Hz and fed that
 to the LFE1 speaker, under the stage.  The Audacity project is in
 example 4 under Weather.
+
 \subsection{Act 01 Scene 03 Page 043: The Wasteland}
 We transition to a new scene, where the background sound
 is not of a garden but of a wasteland.  There is a waterfall
-nearby, so we will also have the sound of running water, as
-we did in the Garden of Eden.
+nearby, so we will also have the sound of running water, available,
+as we did in the Garden of Eden.
+
 \subsubsection{Act 01 Scene 03 Page 044: Birth of Cain and Abel}
-Use the cry of a newborn baby for each birth.
+Use the cry of a newborn baby for each birth.  Label each cluster
+with the name of the baby.
+
 \subsubsection{Act 01 Scene 03 Page 061: Eve slaps Cain}
 The slap is a spot sound.
+
 \subsubsection{Act 01 Scene 03 Page 062: Circle of Giant Standing Stones}
 To convey that this is a diffrerent place the wasteland sound
-should be different, perhaps with more life in it.
-Perhaps we can add some of the garden.
+should be different, perhaps with more life in it.  I have added
+the Garden of Eden as additional background.
+
 \subsubsection{Act 01 Scene 03 Page 065: Distant Rumble of Thunder}
 Use the rear speakers only, to convey that the thunder is distant.
+
 \subsubsection{Act 01 Scene 03 Page 069: Adam Strikes Cain}
 We can use the same slap as when Eve slapped Cain, though louder.
+
 \subsubsection{Act 01 Scene 03 Page 070: Adam Strikes Cain Again}
 Again use the same slap.
+
 \subsubsection{Act 01 Scene 03 Page 071: Cain Kills Abel}
 Use a different sound for the blows that Cain strikes.
+
 \subsection{Act 01 Scene 04 Page 072: The Mark of Cain}
 As Adam and Eve exit with Abel's body, we transition to a new
-scene.  The background sounds are wind and rain which slowly
-fade in.
+scene.  The background sounds are wind and rain.  They are
+on separate clusters so the sound effects operator can adjust
+them as needed, and they slowly fade in when he starts them.
+
 When Father first calls out to Cain there is thunder from
 all four speakers, but it ends just before Father calls out
 a second time.
+
 \subsubsection{Act 01 Scene 04 Page 073: Cain is Marked}
 When Father and Storytellers sing
 ``the race of Cain must ever bear this mark!''
@@ -342,20 +365,25 @@ the thunder and knew just when it should sound, and they should do
 their best to keep up.
 When Cain exits and Eve enters we transition to a new scene,
 back in the wilderness.  The wind and rain fade out for five seconds.
+
 \subsection{Act 01 Scene 05 Page 073: Eve Enters}
 Use the same wilderness background as for scene 3.
+
 \subsection{Intermission}
 There is no background sound during intermission, but at its end
 there is an optional safety announcement
 as the audience is taking their seats.  I have included the one
 from the Souhegan High School in Amherst, NH.
+
 \subsection{Act 02 Scene 01 Page 081: Generations of Adam}
 The background should be of a nice place, with a hint of a distant
 stream and the occasional insect.  It is not as alive as the garden,
 but not as dead as the wasteland.
+
 \subsubsection{Act 02 Scene 01 Page 91: Noah Pounds}
 Thud as Noah pounds in the last peg of gopher wood.
 This is probably better done live.
+
 \subsubsection{Act 02 Scene 01 Page 101: Animals Appear}
 Each animal has an introductory sound: bunnies, turtles, chimps,
 panthers, birds, frogs, mike, zebras, ostriches, giraffes and elephants.
@@ -363,47 +391,61 @@ Since their order is well-defined, we can present each to the sound
 effects operator when the previous one has completed.  This lets us
 use the same button for each sound--the sound effects operator
 just presses ``Start'' when the next animal appears.
+
 \subsubsection{Act 02 Scene 01 Page 103: Thunder}
-As Yonah sings ``thunder'', put a distant rumble of thunder in the
-rear speakers.  As the end of the verse, do a closer rumble.
-At the end of the next verse, after ``profane'' another thunder.
-After ``let it rain'' thunder again to cue Japheth.
+The script calls for just one thunder on this page, but the director
+has asked for four: a very distant, very bass rumble at the top
+of the page, a closer rumble at ``not a stranger to the rain'',
+closer yet at ``sacred and profane'', and even closer at ``let it rain'',
+which is where the script calls for thunder.
+
 \subsubsection{Act 02 Scene 01 Page 107: Thunder}
 As Japheth and Yonah kiss, there is a close rumble of thunder.
 Use all four speakers, though mostly in the rear.
 When Japheth says ``come on!'' there is a louder and closer
 thunder clap.  Use front and rear speakers equally.
+
 \subsection{Act 02 Scene 02 page 108: Rain}
 The rain starts, mostly in the front speakers.  This starts a new scene.
+
 \subsubsection{Act 02 Scene 02 Page 109: Thunder}
 On ``Hurricane'' the rain starts.
 After ``forever will it rain'' there is a flash of lightning
 and a big clap of thunder.  Start it in the rear speakers
 and move it quickly to the front.
 After ``and now I feel so old'' there is another thunder.
+
 \subsection{Act 02 Scene 03 Page 110: On the Deck of the Ark}
 There is rain falling onto the gopher-wood ark.
 The rain is mostly in the front speakers.
 There is also wind, using all four speakers.
+
 \subsubsection{Act 02 Scene 03 Page 114: Bird Call}
 There is a bird sound from a birdcage.  Put this in the speaker
 closest to the birdcage.
+
 \subsubsection{Act 02 Scene 03 Page 116: Commotion of People and Animals}
 Use the front speakers only.
+
 \subsubsection{Act 02 Scene 03 Page 118: Noah Strikes Japheth}
 Use the same slap as in act 1 when Adam struck Cain.
+
 \subsubsection{Act 02 Scene 03 Page 119: Noah Strikes Japheth Again}
 Use the same sound as in act 1 when Adam fights Cain.
 When Yonah says ``No!'' stop the wind.
+
 \subsubsection{Act 02 Scene 03 page 118: Noah Bangs Staff}
 This is probably better done live.
+
 \subsubsection{Act 02 Scene 03 Page 126: Rain Fades}
 When Japheth says ``Look!'', start to fade the rain.
 The release time should be 15 seconds, so the rain is gone
 by the time Mama says ``An olive tree.''.
+
 \subsection{Act 02 Scene 04 Page 130: Back on Land}
 This scene is ``early one morning a few weeks later''.
 Use the same background sound as for scene 1.
+
 \subsection{After the Show}
 When the last curtain has fallen, play some nice music as the audience
 is leaving.
