--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.126, July 3, 2020
+  Allow multiple text_to_display elements; concatenate them.
+  
 Version 0.125, July 1, 2020
   Reorganize the examples.
   
