--- a/Docs/sound_effects_player_example_04.tex
+++ b/Docs/sound_effects_player_example_04.tex
@@ -91,11 +91,11 @@
   pdfcontactregion={New Hampshire},
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2020 by John Sauter},
-  pdfdate={2020-07-03},
+  pdfdate={2020-07-07},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}  
 }
-\date{2020-07-03}
+\date{2020-07-07}
 \maketitle
 \begin{abstract}
   How to produce sound effects for live theatrical performances
@@ -237,20 +237,21 @@ time to fix any cable failures or wiring errors.  This needn't be complex:
 a single sound that identifies all five speakers in turn should be enough.
 I have used a track called ``6-channel ID'' which identifies all of the
 speakers in a 5.1 surround sound system.  If your speaker wiring is correct
-You won't hear the front center speaker.
+you won't hear the front center speaker.
 
 Here is the description of the sound in {\ttfamily Theater\_sound.xml}:
 \inputminted[firstline=11,lastline=73]{xml}{../examples/04/Theater_sounds.xml}
 \embedfile[desc={Sounds commonly used in this theater},
   mimetype={text/plain}]{../examples/04/Theater_sounds.xml}
 
+The 8-second sound repeats until the operator stops it.
 Each channel is sent to the speaker corresponding to the name heard
 on the channel.
 
 To allow the sound effects operator to play the sound before the house
 opens we have the following in {\ttfamily Theater\_sound\_sequence.xml}:
-\inputminted[firstline=6,lastline=23]{xml}%
-            {../examples/04/Theater_sound_sequence.xml}
+\inputminted[firstline=6,lastline=24]{xml}
+  {../examples/04/Theater_sound_sequence.xml}
 \embedfile[desc={Sound sequences commonly used in this theater},
   mimetype={text/plain}]{../examples/04/Theater_sound_sequence.xml}
 The first sequence item tells the sound effects operator that he can
@@ -262,8 +263,8 @@ cluster 0.
 In order to get this to work we must have a starting point for the
 sequence, and a sequence item which causes the above to be executed.
 This is in {\ttfamily Example\_04\_sound\_sequence.xml}:
-\inputminted[firstline=7,lastline=18]{xml}%
-            {../examples/04/Example_04_sound_sequence.xml}
+\inputminted[firstline=7,lastline=19]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 \embedfile[desc={Sound sequences for this play},
   mimetype={text/plain}]{../examples/04/Example_04_sound_sequence.xml}
 In the above, ``start\_of\_sequence'' is where the sequence starts.
@@ -278,25 +279,29 @@ When the house opens the Sound Effects Operator presses the Play
 button, which stops the 6-channel-ID sound if it is playing
 and takes it off cluster 0 so he can no longer play it.
 
-\inputminted[firstline=20,lastline=32]{xml}%
-            {../examples/04/Example_04_sound_sequence.xml}
+\inputminted[firstline=21,lastline=33]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 \subsection{House is Open}
 Play a medley of music from the play, perhaps recorded during rehearsal.
 To avoid copyright issues with this paper, I have used a nice public domain song
 in example 4.  You won't have a copyright problem because as part of the right
-to produce your play you have a right to play its music for your audience.
+to produce your play you have the right to play its music for your audience.
 
 Here is the definition of the sound from {\ttfamily Example\_04\_sounds.xml}:
 \inputminted[firstline=7,lastline=53]{xml}{../examples/04/Example_04_sounds.xml}
 \embedfile[desc={Sounds for this production},
   mimetype={text/plain}]{../examples/04/Example_04_sounds.xml}
 Notice that it repeats until the sound effects operator stops it.
-Here are the sequence items which control it,
-from {\ttfamily Example\_04\_sound\_sequence.xml}.
-\inputminted[firstline=34,lastline=58]{xml}%
-            {../examples/04/Example_04_sound_sequence.xml}
-This sequence starts the sound, waits for the operator to push the Play
-button, then stops the sound.
+The sound is mostly in the front speakers, but the rear speakers
+get half the volume.  The sound effects operator can increase the volume
+level by up to a factor of 2.
+
+Here are the sequence items which control the music,
+from file {\ttfamily Example\_04\_sound\_sequence.xml}.
+\inputminted[firstline=35,lastline=60]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
+The above sequence starts the sound, waits for the operator to push the Play
+button, then stops the sound if it is running.
 \subsection{Almost Ready for Curtain}
 Your theater will probably want to make a safety announcement.
 This might be done live by the management, but in case it isn't
@@ -304,16 +309,32 @@ offer the sound effects operator a choice of announcements
 to play.  I have included in example 4 the announcements used at
 the Souhegan High School in Amherst, NH, where I did the sound
 for the Amherst PTA production of Children of Eden in 2010.
+Here are the sounds, from {\ttfamily Theater\_sounds.xml}:
+\inputminted[firstline=75,lastline=134]{xml}{../examples/04/Theater_sounds.xml}
+
+And here are the sequence items,
+from {\ttfamily Example\_04\_sound\_sequence.xml}
+and {\ttfamily Theater\_sound\_sequence.xml}:
+\inputminted[firstline=26,lastline=158]{xml}
+  {../examples/04/Theater_sound_sequence.xml}
+\inputminted[firstline=62,lastline=83]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
+            
 There are announcements for Morning, Evening and Afternoon
 performances.  The Afternoon and Evening versions have
 short, long and long humerous versions, whereas Morning
-has only short.  You should record a voice familiar to your audience
+has only short.
+The sound effects operator will play the appropriate
+announcement.
+You should record a voice familiar to your audience
 making the announcements.
 
 \subsection{Act 01 Scene 01 Page 001: Creation}
 The play starts in the dark, before the Earth was created.
 It isn't at all clear what sounds would convey this to the
 audience, so we'll just have silence.
+\inputminted[firstline=85,lastline=93]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 
 \subsection{Act 01 Scene 02 Page 007: Garden of Eden}
 The Garden of Eden should sound like a garden full of mammals,
@@ -323,10 +344,24 @@ We want a sound different from the silence
 of the void, but not loud enough to distract the audience
 from the story.
 
+Let's use the sound of a forest.  It is mostly birds, but
+you can hear other noises in the bush.
+\inputminted[firstline=55,lastline=111]{xml}
+  {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=95,lastline=105]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
+
 \subsubsection{Act 01 Scene 02 Page 015: Animals Appear}
 As the animals arrive their sounds become more noticable until
 Father starts to sing.  The director will probably not want a
-sound effect for this, but you never know.
+sound effect for this, but you never know.  Like the announcements,
+we will make this sound available to the sound effects operator,
+and if the director decides at the last minute that he doesn't
+like it, the operator can simply not push the Start button.
+\inputminted[firstline=113,lastline=120]{xml}
+  {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=107,lastline=124]{xml}
+  {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 01 Scene 02 Page 024: Tree of Knowledge}
 The tree is said to be near a waterfall, so we can add the sound
@@ -343,9 +378,23 @@ each pair of speakers around the room: front, rear, left and right.
 Each speaker thus gets two channels.  The four stereo recordings
 are of different lengths, so as they repeat the audience doesn't
 hear the same sound every few seconds.
+\inputminted[firstline=122,lastline=250]{xml}
+            {../examples/04/Example_04_sounds.xml}
+
+In the sequence below, notice that the sound is offered on just
+one cluster, but pressing its Start button starts all four sounds.
+In addition, when any Stop button is pressed, all of the sounds
+are stopped.
+
+\inputminted[firstline=126,lastline=187]{xml}
+            {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 01 Scene 02 Page 033a: Eve Bites the Apple}
 As Eve bites, make the sound of an apple being bitten into.
+\inputminted[firstline=252,lastline=258]{xml}
+            {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=189,lastline=205]{xml}
+            {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 01 Scene 02 Page 033b: Eve Departs}
 Eve walks off through the garden so
@@ -365,43 +414,103 @@ from front to rear.  In addition, to enhance the bass
 I filtered a monophonic version of
 the sound to eliminate all frequencies over 100 Hz and fed that
 to the LFE1 speaker, under the stage.
+\inputminted[firstline=260,lastline=316]{xml}
+            {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=207,lastline=225]{xml}
+            {../examples/04/Example_04_sound_sequence.xml}
 
+That's all the sounds we will need in scene 2.  When it is over
+stop them so we can use those same clusters for the sounds
+in scene 3.  However, leave the water sound available
+because we will need it in the next scene.
+
+\inputminted[firstline=227,lastline=270]{xml}
+            {../examples/04/Example_04_sound_sequence.xml}
+            
 \subsection{Act 01 Scene 03 Page 043: The Wasteland}
 We transition to a new scene, where the background sound
 is not of a garden but of a wasteland.  There is a waterfall
-nearby, so we will also have the sound of running water, available,
-as we did in the Garden of Eden.
+nearby, so we will continue to have the sound of running water
+available, as we did in the Garden of Eden.
+\inputminted[firstline=318,lastline=357]
+            {xml}{../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=272,lastline=280]{xml}
+            {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 01 Scene 03 Page 044: Birth of Cain and Abel}
 Use the cry of a newborn baby for each birth.  Label each cluster
 with the name of the baby.
 
+\inputminted[firstline=359,lastline=368]{xml}
+            {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=282,lastline=318]{xml}
+            {../examples/04/Example_04_sound_sequence.xml}
+
 \subsubsection{Act 01 Scene 03 Page 061: Eve slaps Cain}
 The slap is a spot sound.
+In the 2010 Amherst PTA Play production we eliminated this sound
+since the actress playing Eve, who is an elementary school teacher
+in real life, could not bring herself to slap the actor playing
+Cain.  If your Eve is made of sterner stuff you can use Adam's slap
+below, or perhaps a softer version of it.
 
 \subsubsection{Act 01 Scene 03 Page 062: Circle of Giant Standing Stones}
-To convey that this is a diffrerent place the wasteland sound
-should be different, perhaps with more life in it.  I have added
-the Garden of Eden as additional background.
+To convey that this is a diffrerent place, the wasteland sound
+should be different, perhaps with more life in it.  Do that by
+adding this sound:
+
+\inputminted[firstline=370,lastline=422]{xml}
+            {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=320,lastline=337]{xml}
+            {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 01 Scene 03 Page 065: Distant Rumble of Thunder}
 Use the rear speakers only, to convey that the thunder is distant.
+\inputminted[firstline=424,lastline=481]{xml}
+            {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=339,lastline=357]{xml}
+            {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 01 Scene 03 Page 069: Adam Strikes Cain}
-We can use the same slap as when Eve slapped Cain.
+A slap sound effect must be timed perfectly.  During rehearsal
+pay close attention to the actor who delivers the slap so you can
+use his body language to time the slap.  When I was learning
+to do this on a different show I asked the actor to give me
+a big windup so I could get the timing right.
+That works for slapstick but not for Children of Eden.
+
+\inputminted[firstline=483,lastline=489]{xml}
+            {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=359,lastline=376]{xml}
+            {../examples/04/Example_04_sound_sequence.xml}
 
 \subsubsection{Act 01 Scene 03 Page 070: Adam Strikes Cain Again}
-Again use the same slap.
+Use the same slap.
 
 \subsubsection{Act 01 Scene 03 Page 071: Cain Kills Abel}
-Use a different sound for the blows that Cain strikes.
+Use a bonk sound for the blows that Cain strikes.  The sound
+effects operator can push the button for each blow.
 
-\subsection{Act 01 Scene 04 Page 072: The Mark of Cain}
+\inputminted[firstline=491,lastline=497]{xml}
+            {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=378,lastline=395]{xml}
+            {../examples/04/Example_04_sound_sequence.xml}
+
+\subsection{Act 01 Scene 04 Page 072a: The Mark of Cain}
+This is a new location so we call it Scene 4, but for sound effects
+purposes we just add it onto the end of scene 3.
+
 As Adam and Eve exit with Abel's body, we transition to a new
-scene.  The background sounds are wind and rain.  They are
-on separate clusters so the sound effects operator can adjust
-them as needed, and they slowly fade in when he starts them.
+scene.  The background sounds are wind and rain, though the wasteland
+is still there.  Put them on separate clusters so the sound effects
+operator can adjust them as needed.  They slowly fade in when he starts them.
 
+\inputminted[firstline=499,lastline=582]{xml}
+  {../examples/04/Example_04_sounds.xml}
+\inputminted[firstline=397,lastline=425]{xml}
+            {../examples/04/Example_04_sound_sequence.xml}
+
+\subsection{Act 01 Scene 04 Page 072b: The Mark of Cain}
 When Father first calls out to Cain there is thunder from
 all four speakers, but it ends just before Father calls out
 a second time.
