--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 0.127, July 8, 2020
+  Fix a problem displaying the remaining time of a released sound.
+  
 Version 0.126, July 3, 2020
   Allow multiple text_to_display elements; concatenate them.
   
